# not-devin

./: .env.example  .gitignore  README.md  not-devin.example.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json
.claude/hooks/: auto-commit.sh
.github/workflows/: tests.yml
src/: __init__.py  cli.py  graph.py  guard.py  runner.py  state.py  verify.py
src/cli/: index.ts  inspect.test.ts  inspect.ts  repl.test.ts  repl.ts
src/core/: message-helpers.ts  model-registry.ts  runtime.test.ts  runtime.ts  tool-validation.ts  types.ts
src/core/audit/: event-log.ts  events.ts
src/event_log/: __init__.py  handler.py  ids.py  reader.py  render.py  replay.py  writer.py
src/github/: __init__.py  auth.py  errors.py  rest.py  service.py
src/runtime/: __init__.py  budget.py  config.py  invoker.py  providers.py
src/tools/: __init__.py  edit_file.py  github.py  read_file.py
tests/: test_budget.py  test_cli.py  test_edit_file.py  test_event_log_handler.py  test_event_log_ids.py  test_event_log_reader.py  test_event_log_render.py  test_event_log_replay.py  test_event_log_writer.py  test_github_auth.py  test_github_rest.py  test_github_tools.py  test_graph.py  test_guard.py  test_invoker.py  test_providers.py  test_read_file.py  test_runner.py  test_runtime_config.py  test_verify.py
